force-app/main/default/objects/Commission_Payment__c/Commission_Payment__c.object-meta.xml
<CustomObject>
    <label>Commission Payment</label>
    <nameField>
        <label>Commission Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>