force-app/main/default/objects/Commission_Payment__c/fields/Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reason__c</fullName>
    <inlineHelpText>The reason for a given Adjustment of a Commission Payment</inlineHelpText>
    <label>Adjustment Reason</label>
    <type>TextArea</type>
</CustomField>