force-app/main/default/objects/Commission_Payment__c/fields/Adjustment_To_Payment__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_To_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>(Optional) Specify the particular Commission Payment that this Adjustment is applied to</inlineHelpText>
    <label>Adjustment To Payment</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please choose a Commission Payment to apply this adjustment to which is a part of the existing Invoice</errorMessage>
        <filterItems>
            <field>Commission_Payment__c.Invoice__r.Id</field>
            <operation>equals</operation>
            <valueField>Commission_Payment__c.Invoice__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Commission_Payment__c</referenceTo>
    <relationshipLabel>Adjustments</relationshipLabel>
    <relationshipName>Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>