force-app/main/default/objects/Commission_Payment__c/fields/Commission_Structure__c.field-meta.xml
<CustomField>
    <fullName>Commission_Structure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Structure</label>
    <referenceTo>Commission_Structure__c</referenceTo>
    <relationshipLabel>Commission Payments</relationshipLabel>
    <relationshipName>Commission_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>