force-app/main/default/objects/Commission_Payment__c/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <label>Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Contract Execution</fullName>
                
                
                    <label>Contract Execution</label>
                
                </value>
            
                <value>
                
                    <fullName>First Bill Sent</fullName>
                
                
                    <label>First Bill Sent</label>
                
                </value>
            
                <value>
                
                    <fullName>First Bill Paid</fullName>
                
                
                    <label>First Bill Paid</label>
                
                </value>
            
                <value>
                
                    <fullName>Cancellation/Refund</fullName>
                
                
                    <label>Cancellation/Refund</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>