force-app/main/default/objects/Commission_Payment__c/fields/Contract_Execution_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Execution_Amount__c</fullName>
    <label>Contract Execution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>