force-app/main/default/objects/Commission_Payment__c/fields/First_Bill_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Paid_Amount__c</fullName>
    <label>First Bill Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>