force-app/main/default/objects/Commission_Payment__c/fields/Future_Customer_Subscription_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>Future_Customer_Subscription_kW_DC__c</fullName>
    <formula>Opportunity__r.CS_Capacity_Allocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Customer Subscription (kW DC)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>