force-app/main/default/objects/Commission_Payment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Not Due</fullName>
                
                
                    <label>Not Due</label>
                
                </value>
            
                <value>
                
                    <fullName>Pending Approval</fullName>
                
                
                    <label>Pending Approval</label>
                
                </value>
            
                <value>
                
                    <fullName>Approved</fullName>
                
                
                    <label>Approved</label>
                
                </value>
            
                <value>
                
                    <fullName>Rejected</fullName>
                
                
                    <label>Rejected</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>