force-app/main/default/objects/Commission_Payment__c/validationRules/Prevent_Adjustment_After_Invoice_Submit.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Adjustment_After_Invoice_Submit</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; ISPICKVAL(Commission_Type__c, &quot;Adjustment&quot;) &amp;&amp; NOT(ISPICKVAL(Invoice__r.Status__c, &quot;Received &gt;&gt; QC&quot;))</errorConditionFormula>
    <errorDisplayField>Invoice__c</errorDisplayField>
    <errorMessage>An adjustment cannot be created because the corresponding Partner Invoice is already in progress or submitted. Ensure that the status of the Invoice is &apos;Received &gt;&gt; QC&apos; to proceed.</errorMessage>
</ValidationRule>